uzum qayta ishlash 3

--- a/pages/katalog.html
+++ b/pages/katalog.html
@@ -206,16 +206,98 @@
 
 
                     <div class="kat__box">
-                        <!-- <a class="kat__link1" href="./maishiytexnika.html">Maishiy texnika ></a>
-                    
-                    <a href="./maishiytexnika.html"></a> -->
+                        
                     <a href="./maishiytexnika.html">
 
-                        <h3>Maishiy texnika ></h3>
+                        <h4 class="black">Maishiy texnika ></h4>
 
+                        <h6 class="black">Go'zallik uchun texnika</h6>
+
+                        <p class="black">Soch kesish</p>
+                        <p class="black">Soch turmaklash</p>
+
+
+                        <p class="black">Elektr ustalari</p>
+
+
+                        <p class="black">Epilyatorlar va aksesurlar</p>
+
+
+                        <p class="black">Yerda turadigan tarozilar</p>
+
+                        <p class="black">Apparatli kossmetalogya</p>
+
+
+                        <p class="black">Milisonyalar</p>
+
+
+                        <h6 class="black">Maishiy texnika uchun boshqa aksesurlar va ehtiyot qisimlar</h6>
 
                     </a>
 
+<div>
+    <a href="./maishiytexnika.html">
+
+        <h4 class="black">Maishiy texnika ></h4>
+
+        <h6 class="black">Go'zallik uchun texnika</h6>
+
+        <p class="black">Soch kesish</p>
+        <p class="black">Soch turmaklash</p>
+
+
+        <p class="black">Elektr ustalari</p>
+
+
+        <p class="black">Epilyatorlar va aksesurlar</p>
+
+
+        <p class="black">Yerda turadigan tarozilar</p>
+
+        <p class="black">Apparatli kossmetalogya</p>
+
+
+        <p class="black">Milisonyalar</p>
+
+
+        <h6 class="black">Maishiy texnika uchun boshqa aksesurlar va ehtiyot qisimlar</h6>
+
+    </a>
+
+
+</div>
+
+<div>
+    <a href="./maishiytexnika.html">
+
+        <h4 class="black">Maishiy texnika ></h4>
+
+        <h6 class="black">Go'zallik uchun texnika</h6>
+
+        <p class="black">Soch kesish</p>
+        <p class="black">Soch turmaklash</p>
+
+
+        <p class="black">Elektr ustalari</p>
+
+
+        <p class="black">Epilyatorlar va aksesurlar</p>
+
+
+        <p class="black">Yerda turadigan tarozilar</p>
+
+        <p class="black">Apparatli kossmetalogya</p>
+
+
+        <p class="black">Milisonyalar</p>
+
+
+        <h6 class="black">Maishiy texnika uchun boshqa aksesurlar va ehtiyot qisimlar</h6>
+
+    </a>
+
+
+</div>
 
                     </div>
 
