--- a/pages/aksesuarlar.html
+++ b/pages/aksesuarlar.html
@@ -7,11 +7,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="../pages.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
     <link rel="stylesheet" href="../main.css">
-    <title>Document</title>
+    <title>index</title>
 </head>
 
 <body>
@@ -19,29 +20,69 @@
     <header>
         <div class="container">
             <div class="box">
-                <a class="logo__link" style="text-decoration:none;" href="#"> <img src="../images/Без названия.svg"
-                        alt="logo">
+
+                <a class="logo__link" style="text-decoration:none;" href="../pages/index.html"> <img
+                        src="../images/Без названия.svg" alt="logo">
                 </a>
+                <a class="header__katalog" href="../pages/katalog.html">Katolog 📰</a>
+                <!-- <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                    class="katalog__img bi bi-collection" viewBox="0 0 16 16">
+                    <path
+                        d="M2.5 3.5a.5.5 0 0 1 0-1h11a.5.5 0 0 1 0 1h-11zm2-2a.5.5 0 0 1 0-1h7a.5.5 0 0 1 0 1h-7zM0 13a1.5 1.5 0 0 0 1.5 1.5h13A1.5 1.5 0 0 0 16 13V6a1.5 1.5 0 0 0-1.5-1.5h-13A1.5 1.5 0 0 0 0 6v7zm1.5.5A.5.5 0 0 1 1 13V6a.5.5 0 0 1 .5-.5h13a.5.5 0 0 1 .5.5v7a.5.5 0 0 1-.5.5h-13z" />
+                </svg> -->
 
-                <a class="header-logo-link" href="">
-                    <img class="header-logo-img" src="./images/NAMANGANLIKLAR 24.svg" alt="">
-                </a>
 
-
-                <a class="header__katalog" href="../pages/katalog.html">Katolog</a>
-
-                <input type="text" placeholder="Mahsulot va turkumlar izlash">
+                <input class="header__search" type="text" style="width: 260px; ;"
+                    placeholder="Mahsulot va turkumlar izlash...  🔍">
+                <!-- <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search"
+                    viewBox="0 0 16 16">
+                    <path
+                        d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z" />
+                </svg> -->
                 <div class="buttons">
-                    <a class="header__button" href="">
-                        <button>Kirish</button>
-                    </a>
-                    <a class="header__button" href="">
-                        <button>Saralanganlar</button>
-                    </a>
-                    <a class="header__button" href="">
-                        <button>Savat</button>
-                    </a>
+                    <button class="header__buttons"> Kirish 🔑</button>
+                     <!-- <svg xmlns="http://www.w3.org/2000/svg" width="16"
+                        height="16" fill="currentColor" class="bi bi-person odam" viewBox="0 0 16 16">
+                        <path
+                            d="M8 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6Zm2-3a2 2 0 1 1-4 0 2 2 0 0 1 4 0Zm4 8c0 1-1 1-1 1H3s-1 0-1-1 1-4 6-4 6 3 6 4Zm-1-.004c-.001-.246-.154-.986-.832-1.664C11.516 10.68 10.289 10 8 10c-2.29 0-3.516.68-4.168 1.332-.678.678-.83 1.418-.832 1.664h10Z" />
+                    </svg> -->
+                    <button class="header__buttons">Saralanganlar ❤️</button>
 
+                    <!-- <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                        class="bi bi-heart yurak" viewBox="0 0 16 16">
+                        <path
+                            d="m8 2.748-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01L8 2.748zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143c.06.055.119.112.176.171a3.12 3.12 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15z" />
+                    </svg> -->
+                    <button class="header__buttons ">Savat 🛒</button>
+                    <!-- <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-basket " viewBox="0 0 16 16">
+                        <path d="M5.757 1.071a.5.5 0 0 1 .172.686L3.383 6h9.234L10.07 1.757a.5.5 0 1 1 .858-.514L13.783 6H15a1 1 0 0 1 1 1v1a1 1 0 0 1-1 1v4.5a2.5 2.5 0 0 1-2.5 2.5h-9A2.5 2.5 0 0 1 1 13.5V9a1 1 0 0 1-1-1V7a1 1 0 0 1 1-1h1.217L5.07 1.243a.5.5 0 0 1 .686-.172zM2 9v4.5A1.5 1.5 0 0 0 3.5 15h9a1.5 1.5 0 0 0 1.5-1.5V9H2zM1 7v1h14V7H1zm3 3a.5.5 0 0 1 .5.5v3a.5.5 0 0 1-1 0v-3A.5.5 0 0 1 4 10zm2 0a.5.5 0 0 1 .5.5v3a.5.5 0 0 1-1 0v-3A.5.5 0 0 1 6 10zm2 0a.5.5 0 0 1 .5.5v3a.5.5 0 0 1-1 0v-3A.5.5 0 0 1 8 10zm2 0a.5.5 0 0 1 .5.5v3a.5.5 0 0 1-1 0v-3a.5.5 0 0 1 .5-.5zm2 0a.5.5 0 0 1 .5.5v3a.5.5 0 0 1-1 0v-3a.5.5 0 0 1 .5-.5z"/>
+                      </svg> -->
+
+                    <style>
+                        body {
+                            background-color: white;
+                            color: black;
+                        }
+
+                        .dark-mode {
+                            background-color: black;
+                            color: white;
+
+                        }
+                    </style>
+                    </head>
+
+                    <body>
+
+
+                        <button onclick="myFunction()">🌙|🌞</button>
+
+                        <script>
+                            function myFunction() {
+                                var element = document.body;
+                                element.classList.toggle("dark-mode");
+                            }
+                        </script>
                 </div>
 
 
@@ -92,6 +133,10 @@
                     <li class="header__bottom-item">
                         <a href="../pages/bolalartov.html"> Bolalar tovarlari</a>
                     </li>
+
+
+
+                    </li>
                     <li class="header__bottom-item">
                         <div class="custom-select">
                             <select>
@@ -103,6 +148,13 @@
 
                     </li>
 
+                    <li class="header__bottom-item">
+                        <a href="../pages/admin.html">
+                            <button>Admin</button>
+                        </a>
+                    </li>
+
+
 
                 </ul>
             </div>
@@ -110,3 +162,13 @@
 
         </div>
     </header>
+
+    <main>
+    
+
+       
+    </main>
+
+
+    <script src="./js/main.js"></script>
+</body>
