--- a/pages/kiyim.html
+++ b/pages/kiyim.html
@@ -268,8 +268,8 @@
                     </ul>
                 </div>
 
-                <div class="min__box">
-                    <ul class="min__box-item">
+                 <div class="min__box"> 
+                    <!-- <ul class="min__box-item">
                         <li class="list__item">
                             <a class="list__item-link" href="#">
                                 <img class="list__img" src="../images/cf9pf2qvtie1lhbhjn10.jpg" width="202" height="309"
@@ -607,13 +607,14 @@
 
 
 
-                    </ul>
+                    </ul> -->
                 </div>
             </div>
         </section>
 
         </section>
     </main>
+    <script src="../js/main.js"></script>
 </body>
 
 </html>
