--- a/pages/login.html
+++ b/pages/login.html
@@ -4,14 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="UZUM clone" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
     <link rel="stylesheet" href="../main.css">
-    <title>Admin</title>
+    <title>Login</title>
 </head>
 
 <body>
@@ -71,8 +71,6 @@
                             }
                         </script>
                 </div>
-
-
             </div>
             <div class="header__bottom ">
                 <ul class="header__bottom-list ">
@@ -151,52 +149,240 @@
     </header>
 
     <main>
-       <!-- Section: Design Block -->
-<<section class="vh-100 gradient-custom">
-    <div class="container py-5 h-100">
-      <div class="row d-flex justify-content-center align-items-center h-100">
-        <div class="col-12 col-md-8 col-lg-6 col-xl-5">
-          <div class="card bg-dark text-white" style="border-radius: 1rem;">
-            <div class="card-body p-5 text-center">
-  
-              <div class="mb-md-5 mt-md-4 pb-5">
-  
-                <h2 class="fw-bold mb-2 text-uppercase">Login</h2>
-                <p class="text-white-50 mb-5">Please enter your login and password!</p>
-  
-                <div class="form-outline form-white mb-4">
-                  <input type="email" id="typeEmailX" class="form-control form-control-lg" />
-                  <label class="form-label" for="typeEmailX">Email</label>
+        <!-- Section: Design Block -->
+        <section class="vh-100 gradient-custom">
+            <div class="container py-5 h-100">
+                <div class="row d-flex justify-content-center align-items-center h-100">
+                    <div class="col-12 col-md-8 col-lg-6 col-xl-5">
+                        <div class="card bg-dark text-white" style="border-radius: 1rem;">
+                            <div class="card-body p-3 text-center h-100 ">
+
+                                <div class="mb-md-3 mt-md-4 pb-5">
+
+                                    <h2 class="fw-bold mb-2 text-uppercase">Login</h2>
+                                    <p class="text-white-50 mb-5">Please enter your login and password!</p>
+
+                                    <div class="form-outline form-white mb-4">
+                                        <input type="email" id="typeEmailX" class="form-control form-control-lg" />
+                                        <label class="form-label" for="typeEmailX">Email</label>
+                                    </div>
+
+                                    <div class="form-outline form-white mb-4">
+                                        <input type="password" id="typePasswordX"
+                                            class="form-control form-control-lg" />
+                                        <label class="form-label" for="typePasswordX">Password</label>
+                                    </div>
+
+                                    <p class="small mb-5 pb-lg-2"><a class="text-white-50" href="#!">Forgot
+                                            password?</a></p>
+
+                                    <button class="btn btn-outline-light btn-lg px-5" type="submit">Login</button>
+
+                                    <div class="d-flex justify-content-center text-center mt-4 pt-1">
+                                        <a href="#!" class="text-white"><i class="fab fa-facebook-f fa-lg"></i></a>
+                                        <a href="#!" class="text-white"><i
+                                                class="fab fa-twitter fa-lg mx-4 px-2"></i></a>
+                                        <a href="#!" class="text-white"><i class="fab fa-google fa-lg"></i></a>
+                                    </div>
+
+                                </div>
+
+                                <div>
+                                    <p class="mb-0" >Don't have an account? 
+                                    </p>
+                                </div>
+
+
+                                <style>
+                                    /* Full-width input fields */
+                                    input[type=text],
+                                    input[type=password] {
+                                        width: 100%;
+                                        padding: 12px 20px;
+                                        margin: 8px 0;
+                                        display: inline-block;
+                                        border: 1px solid #ccc;
+                                        box-sizing: border-box;
+                                    }
+
+                                    /* Set a style for all buttons */
+
+                                    button:hover {
+                                        opacity: 0.8;
+                                    }
+
+                                    /* Extra styles for the cancel button */
+                                    .cancelbtn {
+                                        width: auto;
+                                        padding: 10px 18px;
+                                        background-color: #f44336;
+                                    }
+
+                                    /* Center the image and position the close button */
+                                    .imgcontainer {
+                                        text-align: center;
+                                        margin: 24px 0 12px 0;
+                                        position: relative;
+                                    }
+
+                                    img.avatar {
+                                        width: 40%;
+                                        border-radius: 50%;
+                                    }
+
+                                    .container {
+                                        padding: 16px;
+                                    }
+
+                                    span.psw {
+                                        float: right;
+                                        padding-top: 16px;
+                                    }
+
+                                    /* The Modal (background) */
+                                    .modal {
+                                        display: none;
+                                        /* Hidden by default */
+                                        position: fixed;
+                                        /* Stay in place */
+                                        z-index: 1;
+                                        /* Sit on top */
+                                        left: 0;
+                                        top: 0;
+                                        width: 100%;
+                                        /* Full width */
+                                        height: 100%;
+                                        /* Full height */
+                                        overflow: auto;
+                                        /* Enable scroll if needed */
+                                        background-color: rgb(0, 0, 0);
+                                        /* Fallback color */
+                                        background-color: rgba(0, 0, 0, 0.4);
+                                        /* Black w/ opacity */
+                                        padding-top: 60px;
+                                    }
+
+                                    /* Modal Content/Box */
+                                    .modal-content {
+                                        background-color: #fefefe;
+                                        margin: 5% auto 15% auto;
+                                        /* 5% from the top, 15% from the bottom and centered */
+                                        border: 1px solid #888;
+                                        width: 80%;
+                                        /* Could be more or less, depending on screen size */
+                                    }
+
+                                    /* The Close Button (x) */
+                                    .close {
+                                        position: absolute;
+                                        right: 25px;
+                                        top: 0;
+                                        color: #000;
+                                        font-size: 35px;
+                                        font-weight: bold;
+                                    }
+
+                                    .close:hover,
+                                    .close:focus {
+                                        color: red;
+                                        cursor: pointer;
+                                    }
+
+                                    /* Add Zoom Animation */
+                                    .animate {
+                                        -webkit-animation: animatezoom 0.6s;
+                                        animation: animatezoom 0.6s
+                                    }
+
+                                    @-webkit-keyframes animatezoom {
+                                        from {
+                                            -webkit-transform: scale(0)
+                                        }
+
+                                        to {
+                                            -webkit-transform: scale(1)
+                                        }
+                                    }
+
+                                    @keyframes animatezoom {
+                                        from {
+                                            transform: scale(0)
+                                        }
+
+                                        to {
+                                            transform: scale(1)
+                                        }
+                                    }
+
+                                    /* Change styles for span and cancel button on extra small screens */
+                                    @media screen and (max-width: 300px) {
+                                        span.psw {
+                                            display: block;
+                                            float: none;
+                                        }
+
+                                        .cancelbtn {
+                                            width: 100%;
+                                        }
+                                    }
+                                </style>
+
+
+                                <button onclick="document.getElementById('id01').style.display='block'"
+                                    style="width:auto; background-color: #888;">Sign Up</button>
+
+                                <div id="id01" class="modal">
+
+
+                                    <form action="/" method="post">
+                                        <h1>Sign Up</h1>
+                                        <p>welcome to Sunmade!</p>
+                                        <p>sign up to join our company</p>
+                                        <div>
+                                            <label for="name">First Name:</label>
+                                            <input type="text" name="name" id="name" required>
+                                        </div>
+                                        <div><label for="lastName">Last Name:</label> <input type="text" name="lastName"
+                                                id="lastName" required></div>
+                                        <div>
+                                            <label for="password">Password:</label> <input type="password"
+                                                name="Password" id="Password" required>
+                                        </div>
+                                        <div><label for="confirm_password">Confirm Password:</label> <input
+                                                type="password" name="confirm_password" id="confirm_password"
+                                                required></label></div>
+                                       <div class="d-flex">
+                                        <div><label for="email">Email:</label>
+                                            <input type="email" name="email" id="email" required>
+                                        </div>
+                                        <div><label for="phone_number">Phone Number: </label><input type="tel"
+                                                name="phone_number" id="phone_number" required></div>
+                                       </div>
+                                        <div><label for="license">Read and agree to our license/terms?<input
+                                                    type="checkbox" name="license" id="license" required></label></div>
+                                        <div><input type="submit" value="Sign Up"></div>
+                                    </form>
+
+                                </div>
+
+                                <script>
+                                    // Get the modal
+                                    var modal = document.getElementById('id01');
+
+                                    // When the user clicks anywhere outside of the modal, close it
+                                    window.onclick = function (event) {
+                                        if (event.target == modal) {
+                                            modal.style.display = "none";
+                                        }
+                                    }
+                                </script>
+
+                            </div>
+                        </div>
+                    </div>
                 </div>
-  
-                <div class="form-outline form-white mb-4">
-                  <input type="password" id="typePasswordX" class="form-control form-control-lg" />
-                  <label class="form-label" for="typePasswordX">Password</label>
-                </div>
-  
-                <p class="small mb-5 pb-lg-2"><a class="text-white-50" href="#!">Forgot password?</a></p>
-  
-                <button class="btn btn-outline-light btn-lg px-5" type="submit">Login</button>
-  
-                <div class="d-flex justify-content-center text-center mt-4 pt-1">
-                  <a href="#!" class="text-white"><i class="fab fa-facebook-f fa-lg"></i></a>
-                  <a href="#!" class="text-white"><i class="fab fa-twitter fa-lg mx-4 px-2"></i></a>
-                  <a href="#!" class="text-white"><i class="fab fa-google fa-lg"></i></a>
-                </div>
-  
-              </div>
-  
-              <div>
-                <p class="mb-0">Don't have an account? <a href="#!" class="text-white-50 fw-bold">Sign Up</a>
-                </p>
-              </div>
-  
             </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
+        </section>
 
     </main>
 </body>
